force-app/main/default/objects/Commission__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>Booking__r.Total_Amount__c  *  (Commission_Percentage__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>