force-app/main/default/objects/Commission__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>