force-app/main/default/objects/Commission__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Filter to accounts with Client Type = Partner Agency</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>