force-app/main/default/objects/Commission__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>When commission was actually paid out</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>