force-app/main/default/objects/Commission__c/validationRules/Commission_Only_On_Confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Only_On_Confirmed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), NOT(ISPICKVAL(Booking__r.Booking_Status__c, &quot;Confirmed&quot;)))</errorConditionFormula>
    <errorMessage>Commission can only be created for a Confirmed booking.</errorMessage>
</ValidationRule>