force-app/main/default/objects/Commission__c/validationRules/Commission_Partner_Must_Be_Agency.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Partner_Must_Be_Agency</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Partner_Account__r.Client_Type__c, &quot;Partner Agency&quot;))</errorConditionFormula>
    <errorMessage>Selected account is not a Partner Agency — commission is only for Partner Agency accounts.</errorMessage>
</ValidationRule>