force-app/main/default/objects/Commission__c/validationRules/Percentage_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_In_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Commission_Percentage__c &lt; 0, Commission_Percentage__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Commission_Percentage__c</errorDisplayField>
    <errorMessage>Commission Percentage must be between 0 and 100.</errorMessage>
</ValidationRule>