force-app/main/default/objects/Commission__c/listViews/Commission_Payable.listView-meta.xml
<ListView>
    <fullName>Commission_Payable</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Commission Payable</label>
</ListView>