force-app/main/default/objects/Commission__c/listViews/Pending_Commissions.listView-meta.xml
<ListView>
    <fullName>Pending_Commissions</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Commissions</label>
</ListView>